# MirrorX

./: .gitignore  Cargo.toml  README.md  README_CN.md  SECURITY.md  build.py  gen_flutter_ffi.ps1  gen_flutter_ffi.sh  install_dependencies_msys2.sh  rustfmt.toml
_mirrorx/src-tauri/: Cargo.toml  tauri.conf.json
_mirrorx/src-tauri/.cargo/: config.toml
_mirrorx/src-tauri/src/: lib.rs  main.rs
_mirrorx/src-tauri/src/command/: config.rs  mod.rs  utility.rs
_mirrorx/src-tauri/src/utility/: mod.rs
app/desktop/mirrorx/: Cargo.toml  build.rs
app/desktop/mirrorx/locales/: en.yml  zh.yml
app/desktop/mirrorx/src/: asset.rs  lib.rs  main.rs
app/desktop/mirrorx/ui/: app.slint
app/desktop/mirrorx_viewport/: Cargo.toml
app/desktop/mirrorx_viewport/src/: main.rs
app/desktop/mirrorx_viewport/ui/: app.slint
mirrorx/: .gitignore  .metadata  .prettierrc  .typesafe-i18n.json  Cargo.toml  README.md  package-lock.json  package.json  pubspec.yaml  tauri.conf.json  tsconfig.json  vite.config.ts
mirrorx/lib/: main.dart  mirrorx_core.dart
mirrorx/lib/_src/controllers/: mirrorx_core.dart  page_view.dart
mirrorx/lib/business/mirrorx_core/: mirrorx_core_bloc.dart  mirrorx_core_state.dart
mirrorx/lib/business/page_manager/: page.dart  page_manager_bloc.dart
mirrorx/lib/components/layout/: layout.dart
mirrorx/lib/components/navigation_menu/: navigation_menu.dart
mirrorx/lib/env/langs/: app_en.arb  app_zh.arb  tr.dart
mirrorx/lib/env/sdk/: mirrorx_core.dart  mirrorx_core.freezed.dart  mirrorx_core_sdk.dart
mirrorx/lib/global_state/: global_state_cubit.dart  global_state_state.dart
mirrorx/lib/model/: desktop.dart
mirrorx/lib/state/: navigator_key.dart
mirrorx/linux/: CMakeLists.txt
mirrorx/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
mirrorx/locales/: en.yml  zh-CHS.yml
mirrorx/macos/Flutter/: GeneratedPluginRegistrant.swift
mirrorx/macos/Runner/: AppDelegate.swift  MainFlutterWindow.swift  mirrorx_core.h
mirrorx/macos/Runner.xcodeproj/: project.pbxproj
mirrorx/src/: api.rs  app.d.ts  app.html  event.rs  main.rs
mirrorx/src-tauri/: Cargo.toml  tauri.conf.json
mirrorx/src-tauri/src/: lib.rs  main.rs
mirrorx/src/command/: add_domain.rs  delete_domain.rs  get_current_domain.rs  get_domains.rs  get_lan_discover_nodes.rs  get_language.rs  init_config.rs  init_lan.rs  init_lan_discover.rs  init_language.rs  init_signaling.rs  lan_connect.rs  mod.rs  set_current_domain_device_password.rs  set_domain_remarks.rs  set_language.rs  signaling_key_exchange.rs  signaling_reply_visit_request.rs  signaling_visit_request.rs  switch_primary_domain.rs
mirrorx/src/components/: command.ts  notification.ts  stores.ts  types.ts  utility.ts
mirrorx/src/gui/: app.rs  connect.rs  gpu.rs  history.rs  lan.rs  mod.rs
mirrorx/src/gui/assets/: mod.rs  (+1 more)
mirrorx/src/i18n/: i18n-types.ts  i18n-util.sync.ts  i18n-util.ts
mirrorx/src/platform/: mod.rs  window_ext.rs
mirrorx/src/routes/: +layout.svelte  +page.svelte
mirrorx/src/utility/: mod.rs  promise_value.rs
mirrorx/src/widgets/: dialog_about.svelte  dialog_domain_add.svelte  dialog_domain_delete.svelte  dialog_domain_edit.svelte  dialog_domain_list.svelte  dialog_domain_switch.svelte  dialog_history_connect.svelte  dialog_lan_connect.svelte  dialog_notification.svelte  dialog_notification_file.svelte  dialog_select_language.svelte  dialog_visit_prepare.svelte  dialog_visit_request.svelte
mirrorx/src/window/: mod.rs
mirrorx/windows/: CMakeLists.txt  rust.cmake
mirrorx/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
mirrorx/windows/runner/: Runner.rc  main.cpp
mirrorx_core/: .gitignore  Cargo.toml  build.rs
mirrorx_core/mirrorx_core.xcodeproj/: project.pbxproj
mirrorx_core/src/: api.rs  bridge.io.rs  bridge.rs  constants.rs  error.rs  export.rs  export_bridge.io.rs  export_bridge.rs  lib.rs
mirrorx_core/src/api/: api.rs  config.rs  endpoint.rs  mod.rs  signaling.rs  socket.rs  system.rs
mirrorx_core/src/client/: mod.rs
mirrorx_core/src/component/: audio.rs  capture_frame.rs  frame.rs  lan_discover.rs  macros.rs  mod.rs
mirrorx_core/src/constants/: os.rs
mirrorx_core/src/ffi/: mod.rs
mirrorx_core/src/media/: ffi_log.rs  mod.rs  native_frame.rs  video_decoder.rs  video_encoder.rs  video_packet.rs
mirrorx_core/src/proto/: mod.rs
mirrorx_core/src/provider/: config.rs  endpoint.rs  mod.rs  signal_a.rs  signaling.rs  socket.rs
mirrorx_core/src/service/: mod.rs
mirrorx_core/src/socket/: client_to_client_handler.rs  endpoint.rs  mod.rs  server_to_client_handler.rs
mirrorx_core/src/test/: audio.rs  decode.rs  display.rs  duplicator.rs  encode.rs  mod.rs  mouse.rs
mirrorx_core/src/utility/: bincode.rs  call_id_generator.rs  lan_ip.rs  macros.rs  mod.rs  nonce_value.rs  os.rs  rand.rs  rng.rs  runtime.rs  wide_char.rs
mirrorx_native/: Cargo.toml  build.rs
mirrorx_native/src/: lib.rs
mirrorx_native/src/ffmpeg/: mod.rs  swresample.rs
mirrorx_native/src/libyuv/: convert_argb.rs  mod.rs  row.rs
mirrorx_native/src/opus/: decoder.rs  encoder.rs
mirrorx_native/src/os/: mod.rs  windows.rs
plugins/mirrorx_core/src/: CMakeLists.txt  mirrorx_core.c  rust.cmake
src/mirrorx_core/: .gitignore  CMakeLists.txt  Cargo.toml  MakeFile.toml  build-dependencies.sh  build.rs
src/mirrorx_core/.cargo/: config.toml
src/mirrorx_core/mirrorx_core.xcodeproj/: project.pbxproj
src/mirrorx_core/src/: api.rs  api_error.rs  bridge.rs  bridge_generated.rs  instance.rs  lib.rs
src/mirrorx_native/: .clang-format  .gitignore  CMakeLists.txt  install_dependencies_macos.sh  install_dependencies_msys2.sh
src/mirrorx_native/desktop_duplicator/: CMakeLists.txt  desktop_duplicator.h  desktop_duplicator_callback.h
src/mirrorx_native/duplicator/: CMakeLists.txt
src/mirrorx_native/ffi_log/: ffi_log.c  ffi_log.h
src/mirrorx_native/rust_log/: CMakeLists.txt  rust_log.c  rust_log.h  test.m
src/mirrorx_native/video_decoder/: CMakeLists.txt  video_decoder.c  video_decoder.h
src/mirrorx_native/video_encoder/: CMakeLists.txt  video_encoder.c  video_encoder.h
(+1148 files in other folders)
