[package]
name = "mirrorx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mirrorx_core = { path = "../mirrorx_core" }
egui_extras = "0.19.0"
once_cell = "1.15.0"
directories-next = "2.0.0"
tokio = "1.21.2"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
anyhow = "1.0.65"
egui-toast = "0.4.0"
futures = "0.3.24"
strum = "0.24"
strum_macros = "0.24"
egui_wgpu_backend = "0.20.0"
egui = "0.19"
egui-winit = "0.19.0"
wgpu = "0.14"
winit = { version = "0.27.4", features = ["x11"] }
raw-window-handle = "0.5.0"
fxhash = "0.2.1"
ring = { version = "0.16.20", features = ["std"] }
crossbeam = "0.8.2"

# [patch.crates-io]

# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
