[package]
name = "mirrorx"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "mirrorx"
edition = "2021"
# rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
mirrorx_core = { path = "../mirrorx_core" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.1", features = ["api-all"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
anyhow = "1.0.66"
tokio = "1.21.2"
tauri-egui = "0.1.0"
egui_extras = "0.19.0"
once_cell = "1.16.0"
ring = { version = "0.16.20", features = ["std"] }
strum_macros = "0.24.3"
crossbeam = "0.8.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.0"
objc = "0.2.7"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
