[package]
name = "mirrorx"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "mirrorx"
edition = "2021"
# rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.0", features = [] }

[dependencies]
mirrorx_core = { path = "../mirrorx_core" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.1", features = ["api-all", "system-tray"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
anyhow = "1.0.66"
tokio = "1.22.0"
tauri-egui = { git = "https://github.com/MirrorX-Desktop/tauri-egui.git" }
egui_extras = { version = "0.19.0", features = [
    "svg",
], git = "https://github.com/MirrorX-Desktop/egui.git" }
once_cell = "1.16.0"
ring = { version = "0.16.20", features = ["std"] }
strum_macros = "0.24.3"
sys-locale = "0.2.3"
language-tags = "0.3.2"
tao = "0.15.6"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.1"
objc = "0.2.7"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
