[package]
name = "mirrorx_core"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
chrono = "0.4.22"
rand = "0.8.5"
serde = { version = "1.0.145", features = ["derive"] }
serde_bytes = "0.11.7"
flutter_rust_bridge = "1.48.0"
anyhow = "1.0.65"
rusqlite = { version = "0.28.0", features = ["bundled"] }
bytes = "1.2.1"
futures = "0.3.24"
tokio = { version = "1.21.1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["full"] }
bincode = "1.3.3"
once_cell = "1.15.0"
dashmap = "5.4.0"
crossbeam = "0.8.2"
libc = "0.2.133"
tracing = "0.1.36"
scopeguard = "1.1.0"
hmac = "0.12.1"
sha2 = "0.10.6"
rsa = "0.7.0"
ring = { version = "0.16.20", features = ["std"] }
pbkdf2 = "0.11"
thiserror = "1.0.35"
hex = "0.4.3"
cpal = "0.14.0"
rtrb = "0.2.2"
os_info = { version = "3.5.1", default-features = false }
async-broadcast = "0.4.1"
tonic = { version = "0.8.1", features = ["gzip"] }
prost = "0.11.0"
serde_json = "1.0.85"
either = "1.8.0"
signaling_proto = { git = "https://github.com/MirrorX-Desktop/signaling.git" }
uuid = { version = "1.2.1", features = ["v4"] }

[target.x86_64-apple-darwin.dependencies]
objc = { version = "0.2.7" }
objc-encode = "1.1.0"
block = "0.1.6"
dispatch = "0.2.0"
objc-foundation = "0.1.1"
objc_id = "0.1.1"
core-foundation = "0.9.3"
core-graphics = { version = "0.22.3", features = ["highsierra"] }

[target.x86_64-pc-windows-msvc.dependencies]
image = "0.24.2"
windows = { version = "0.42.0", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Gdi",
  "Win32_System_StationsAndDesktops",
  "Win32_System_SystemServices",
  "Win32_System_WindowsProgramming",
  "Win32_UI_HiDpi",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Devices_Display",
  "Win32_Media_MediaFoundation",
  "Win32_System_Com",
  "Win32_System_Ole",
  "Win32_System_Com_StructuredStorage",
  "Win32_Media_Audio",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_Devices_FunctionDiscovery",
] }
