[package]
name = "mirrorx_core"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
mirrorx_native = { path = "../mirrorx_native" }
chrono = { version = "0.4", features = [
  "clock",
  "std",
], default-features = false }
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_bytes = "0.11.8"
serde_json = "1.0.91"
serde_with = "2.2.0"
anyhow = "1.0.68"
rusqlite = { version = "0.28.0", features = ["bundled"] }
bytes = "1.3.0"
futures = "0.3.25"
tokio = { version = "1.24.1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["full"] }
bincode = "1.3.3"
once_cell = "1.17.0"
dashmap = "5.4.0"
libc = "0.2.139"
tracing = "0.1.37"
scopeguard = "1.1.0"
hmac = "0.12.1"
sha2 = "0.10.6"
rsa = "0.8.1"
ring = { version = "0.16.20", features = ["std"] }
pbkdf2 = "0.11"
thiserror = "1.0.38"
hex = "0.4.3"
cpal = "0.15.0"
rtrb = "0.2.3"
async-broadcast = "0.5.0"
either = "1.8.0"
uuid = { version = "1.2.2", features = ["v4"] }
fxhash = "0.2.1"
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
tao = { version = "0.15.8", features = ["serde"] }
hostname = "0.3.1"
os_info = "3.5.1"
moka = { version = "0.9.6", features = ["future"] }
async-trait = "0.1.61"
reqwest = { version = "0.11.13", features = ["json"] }
url = "2.3.1"
base64 = "0.21.0"
image = "0.24.5"
rayon = "1.6.1"
tracing-subscriber = "0.3.16"
network-interface = "0.1.6"
dasp = { version = "0.11.0", features = ["all"] }

[target.x86_64-apple-darwin.dependencies]
objc = { version = "0.2.7" }
objc-encode = "1.1.0"
block = "0.1.6"
dispatch = "0.2.0"
objc-foundation = "0.1.1"
objc_id = "0.1.1"
core-foundation = "0.9.3"
core-graphics = { version = "0.22.3", features = ["highsierra"] }
metal = "0.24.0"
cocoa = "0.24.1"

[target.x86_64-pc-windows-msvc.dependencies]
widestring = "1.0.2"
wmi = "0.11.4"
windows = { version = "0.43.0", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Imaging",
  "Win32_System_StationsAndDesktops",
  "Win32_System_SystemServices",
  "Win32_System_WindowsProgramming",
  "Win32_UI_Shell",
  "Win32_UI_HiDpi",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Devices_Display",
  "Win32_Media_MediaFoundation",
  "Win32_System_Com",
  "Win32_System_Ole",
  "Win32_System_Com_StructuredStorage",
  "Win32_Media_Audio",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_Devices_FunctionDiscovery",
  "Win32_Storage_FileSystem",
] }
