[package]
name = "mirrorx_native"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.x86_64-apple-darwin.dependencies]
objc = { version = "0.2.7" }
objc-encode = "1.1.0"
block = "0.1.6"
dispatch = "0.2.0"
objc-foundation = "0.1.1"
objc_id = "0.1.1"
core-foundation = "0.9.3"
core-graphics = { version = "0.22.3", features = ["highsierra"] }
