[package]
name = "mirrorx"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "mirrorx"
edition = "2021"
# rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
mirrorx_core = { path = "../../mirrorx_core" }
serde_json = "1.0.94"
serde = { version = "1.0.154", features = ["derive"] }
tauri = { version = "1.2.4", features = ["api-all", "icon-png", "system-tray"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-appender = "0.2.2"
os_info = "3.5.1"
anyhow = "1.0.69"
tokio = { version = "1.26.0", features = ["full"] }
tauri-egui = { git = "https://github.com/MirrorX-Desktop/tauri-egui.git" }
egui_extras = { features = [
    "svg",
], git = "https://github.com/MirrorX-Desktop/egui.git" }
once_cell = "1.17.1"
http = "0.2.9"
base64 = "0.21.0"
rayon = "1.7.0"
moka = { version = "0.10.0", features = ["future"] }
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
native-dialog = { version = "0.6.3", features = [
    "windows_dpi_awareness",
    "windows_visual_styles",
] }
semver = "1.0.16"
scopeguard = "1.1.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.dev.package.num-bigint-dig]
opt-level = 3

[profile.release]
lto = true
incremental = true
strip = true
