[package]
name = "mirrorx_core"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
log = { version = "0.4.16", features = ["kv_unstable_serde"] }
env_logger = { version = "0.9.0", features = ["humantime"] }
chrono = "0.4.19"
rand = "0.8.5"
serde = { version = "1.0.137", features = ["derive"] }
flutter_rust_bridge = "1.28.1"
anyhow = "1.0.57"
rusqlite = { version = "0.27.0", features = ["bundled"] }
bytes = "1.1.0"
futures = "0.3.21"
tokio = { version = "1.18.1", features = ["full"] }
tokio-util = { version = "0.7.1", features = ["full"] }
bincode = "1.3.3"
ring = "0.16.20"
once_cell = "1.10.0"
rsa = "0.6.1"
dashmap = "5.3.3"
reqwest = { version = "0.11.10", features = ["json"] }
rustc-hash = "1.1.0"
crossbeam-channel = "0.5.4"

[target.x86_64-pc-windows-msvc.dependencies]
# winapi = { version = "0.3.9", features = ["winuser", "d3d11", "dxgi1_2"] }
# wio = "0.2.2"
windows = { version = "0.37.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_System_StationsAndDesktops",
    "Win32_System_SystemServices",
    "Win32_Graphics_Gdi",
    "Win32_System_WindowsProgramming"
] }

[profile.dev.package.num-bigint-dig]
opt-level = 3

[profile.release]
lto = true
incremental = true
