[package]
name = "mirrorx"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.3"
egui_extras = { version = "0.21.0", features = ["image"] }
image = "0.24.5"
once_cell = "1.17.1"
rust-i18n = "1.1.4"
tokio = { version = "1.26.0", features = ["full"] }
uuid = { version = "1.3.0", features = ["v4"] }

[target.x86_64-pc-windows-msvc.dependencies]
windows = { version = "0.46.0", features = [
    "Win32_Graphics_Dwm",
    "Win32_Foundation",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }

[package.metadata.i18n]
# The available locales for your application, default: ["en"].
available-locales = ["en", "zh"]

# The default locale, default: "en".
default-locale = "en"

# Path for your translations YAML file, default: "locales".
# This config for let `cargo i18n` command line tool know where to find your translations.
# You must keep this path is same as the path you pass to `rust_i18n::i18n!` method.
load-path = "locales"
