[package]
name = "mirrorx"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
slint = { version = "1.0.0", default-features = false, features = [
    "std",
    "backend-winit",
    "renderer-winit-skia",
    "compat-1-0",
] }
anyhow = "1.0.70"
tracing = "0.1.37"

[target.'cfg(target_family = "windows")'.dependencies]
windows = { version = "0.48.0", features = [
    "Win32_Graphics_Dwm",
    "Win32_Foundation",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }


[build-dependencies]
slint-build = "1.0.0"
