[package]
name = "mirrorx_viewport"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
slint = { version = "0.3.5", default-features = false, features = [
    "std",
    "backend-winit",
    "renderer-winit-skia",
    "compat-0-3-0",
] }

[target.'cfg(target_family = "windows")'.dependencies]
windows = { version = "0.48.0", features = [
    "Win32_Graphics_Dwm",
    "Win32_Foundation",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }


[build-dependencies]
slint-build = "0.3.5"
